--- a/.README.md
+++ b/.README.md
@@ -1,2 +1,20 @@
 # 3_OKP_lab3
  
+Nu Html Checker
+This tool is an ongoing experiment in better HTML checking, and its behavior remains subject to change
+
+Showing results for https://maks-alex.github.io/3_OKP_lab3/
+Checker Input
+Show sourceoutlineimage report
+
+Check by
+address
+https://maks-alex.github.io/3_OKP_lab3/
+
+Document checking completed. No errors or warnings to show.
+
+Used the HTML parser. Externally specified character encoding was utf-8.
+
+Total execution time 249 milliseconds.
+
+About this checker • Report an issue • Version: 21.1.24
